升级到1.21.4；加入服务器预设歌单